# rtsm

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  GATE_2F2_scope.md  HANDOFF.md  README.md  leep 120  mkdocs.yml  model_store  prototype_gate_2_5.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
config/: rtsm.yaml
demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/src/: main.ts
docker/: Dockerfile.demo  docker-compose.yml
docs/: 2026-05-11-apartment-replay.md  2026-05-12-apartment-replay-debugging.md  benchmarks.md  git-commit.txt  git-head-log.txt  git-status-at-snapshot.txt  index.md  model-store-manifest.txt  pip-freeze.known-good-2026-04-27.txt
docs/api/: mcp.md  rest-api.md  websocket.md
docs/concepts/: architecture.md  memory-model.md  perception-pipeline.md
docs/design/: demo-config-audit.md  persistence.md
docs/evals/: 2026-05-09_small_object_labeling.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: analytics-dashboard.md  record-replay.md  rtabmap-setup.md
docs/handoff/: 2026-05-11.md  2026-05-12-split-gate.md  2026-05-14-option-a.md  2026-05-18-backpressure-and-vio-pivot.md
docs/hardware/: albert-camera-mounting.md
docs/plans/: 2026-05-12-live-ingestion.md
ingest/: Dockerfile  run.sh
ingest/src/: subscriber.py
notes/backpressure-2026-05-18/: README.md
patches/: 2026-05-13-viewbin-aware-assoc.patch
patches/patch_G/: frozen_wm.py  run.py
recordings/demo_clip/: index.jsonl  meta.json
recordings/session1/: index.jsonl  meta.json
reports/: backend_comparison.md  raw_dual.json  raw_grounded_sam2.json  semantic_eval_mean_real.json  semantic_eval_siglip.json  semantic_eval_vitl14_real.json  semantic_search_quality.md
rtsm/: demo.py  run.py
rtsm/analytics/: __init__.py  latency_analytics.py  seg_analytics.py
rtsm/api/: server.py
rtsm/cfg/: __init__.py  demo_config.yaml  rtsm.yaml
rtsm/core/: association.py  datamodel.py  pipeline.py  pipeline.py.bak.20260428_143658
rtsm/io/: mcp_embedded.py  mcp_server.py  recorder.py  replayer.py  websocket.py  zeromq.py
rtsm/static/: index.html
rtsm/stores/: frozen_wm.py  proximity_index.py  sweep_cache.py  (+1 more)
scripts/: benchmark_backends.py  compare_demo_configs.py  debug_segmentation.py  docker-dev.sh  entrypoint.sh  eval_bg_fill.py  eval_semantic_search.py  extract_demo_clip.py  fetch_clip.py  fetch_models.py  live-test.sh  run-subscriber.sh  verify_ingest_pipeline.py
tests/: Dockerfile.deptest  Dockerfile.gpu-test  e2e_mcp_embedded.py  test_analytics.py  test_camera_feed.py  test_debug_rgb.py  test_demo_components.py  test_image_rotation.py  test_ingest_keyframe.py  test_ingest_pipeline.py  test_mcp_embedded.py  test_mcp_server.py  test_model_loading.py  test_object_patch.py  test_record_replay.py  test_serve_api.py  test_spatial_search.py  test_websocket.py  test_websocket_e2e.py
(+51 files in other folders)
