[project]
name = "rtsm"
version = "0.1.0"
description = "Real-Time Spatio-Semantic Memory for spatial AI and robotics"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core
    "numpy",
    "Pillow>=7.1.2",
    "PyYAML>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "tqdm>=4.64.0",
    "pandas>=1.1.4",
    "opencv-python-headless>=4.6.0",
    "psutil>=7.0.0",
    "setuptools>=64",
    # API
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "prometheus-client>=0.16.0",
    # ZeroMQ
    "pyzmq>=25.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "open-clip-torch",
    "sam2>=1.0",
    "transformers>=4.44.0",
    "faiss-cpu>=1.12.0",
]
gpu-ultralytics = [
    "rtsm[gpu]",
    "ultralytics>=8.4.0",
]
viz = [
    "open3d>=0.18.0",
    "matplotlib>=3.2.2",
    "seaborn>=0.11.0",
]
all = [
    "rtsm[gpu,viz]",
]

[project.scripts]
rtsm = "rtsm.run:main"
rtsm-run = "rtsm.run:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rtsm*"]
exclude = [
    "tests*",
    "scripts*",
    "config*",
    "docker*",
    "test_dataset*",
    "model_store*",
]
